--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ./style/scss/*.scss ./style/css/style.scss"
+    "sass": "sass --watch ./style/scss/*.scss ./style/css/style.css"
   },
   "repository": {
     "type": "git",
